--- a/src/Pages/Shared/Footer/Footer.css
+++ b/src/Pages/Shared/Footer/Footer.css
@@ -2,5 +2,25 @@
     background: #185263;
     color: white;
     padding: 3px 0;
-    margin-top: 34px;
+}
+.footer-wrap {
+    overflow: hidden;
+}
+.footer-block {
+    padding: 23px 0;
+}
+h2.footer-header {
+    color: white;
+    padding-top: 14px;
+}
+.footer-block a {
+    text-decoration: none;
+}
+.map-header {
+    background: #185263;
+    color: white;
+    padding: 9px 0;
+}
+.map-header h2{
+    margin: 0;
 }
