--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -1,3 +1,8 @@
 nav.navbar {
     border-bottom: 6px solid #ffc72c;
 }
+img.user-header-img {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+}
