--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -4,3 +4,8 @@
 .logo {
     margin-bottom: 119px;
 }
+@media only screen and (min-width:320px) and (max-width:700px) {
+    .carousel h3 {
+        font-size: 17px;
+    }
+}
